--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -52,13 +52,13 @@
     - { role: hashicorp, tags: [ 'hashicorp' ] }
     - { role: virtualbox, tags: [ 'virtualbox' ], when: ansible_virtualization_role == "host" }
     - { role: docker, install_docker_compose: true, tags: [ 'docker' ] }
-    - { role: maven, tags: [ 'maven' ], when: ansible_distribution != 'MacOSX' }
-    - { role: gradle, gradle_daemon: true, tags: [ 'gradle' ], when: ansible_distribution != 'MacOSX' }
+      #- { role: maven, tags: [ 'maven' ], when: ansible_distribution != 'MacOSX' }
+      #- { role: gradle, gradle_daemon: true, tags: [ 'gradle' ], when: ansible_distribution != 'MacOSX' }
     - { role: node, tags: [ 'node' ], when: ansible_distribution != 'MacOSX' }
-    - { role: ansible-role-homebrew, tags: [ 'homebrew' ], when: ansible_distribution == 'MacOSX' }
+      #- { role: ansible-role-homebrew, tags: [ 'homebrew' ], when: ansible_distribution == 'MacOSX' }
     - { role: oh-my-zsh, tags: [ 'oh-my-zsh' ] }
     - { role: gnome-themes, tags: [ 'gnome-themes' ], when: ansible_distribution != 'MacOSX' }
-    - { role: spotify, tags: [ 'spotify' ], when: ansible_distribution != 'MacOSX' }
+      #- { role: spotify, tags: [ 'spotify' ], when: ansible_distribution != 'MacOSX' }
     - { role: repos-git, tags: [ 'repos-git' ] }
     - { role: aws, tags: [ 'aws' ] }
 
