--- a/ansible/vars/mmcmurray.yml
+++ b/ansible/vars/mmcmurray.yml
@@ -63,6 +63,7 @@ extra_packages:
   - python3-venv
   - nautilus-dropbox
   - postgresql-client
+  - telegram-desktop
 
 snap_packages:
   - gotop-cjbassi
